--- a/style.css
+++ b/style.css
@@ -234,4 +234,19 @@ a:hover{
          justify-items: center;
          gap: 20px;
     }
+    .love-ft{
+    flex-direction: column;
+    gap: 30px;
+}
+ .love-ft img{
+    width: 100%;
+}
+.btn4{
+    padding: 20px;
+    margin-top: -100px;
+    margin-left: -10px;
+}
+#btn-span1{
+    font-size: 2.02rem;
+}
 }
